[project]
name = "code100-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Nimrod",email = "nimrod@baz.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests"
]

[tool.poetry]
packages = [
    { include = "code100_2025" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"
types-requests = "^2.32.0.20250602"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
